# spreadget

./: Cargo.toml  README.md  build.rs
src/: anonymous_level.rs  binance.rs  bitstamp.rs  lib.rs  main.rs  orderbook.proto  tui.rs
src/connections/: binance.rs  bitstamp.rs  mod.rs
src/tui/: app.rs  inputs.rs  mod.rs  ui.rs
