[package]
name = "spreadget"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
float-ord = "0.3.2"
futures = "0.3.21"
log = "0.4.16"
prost = "0.9.0"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
structopt = "0.3.26"
thiserror = "1.0.30"
tokio = {version = "1.17.0", features = ["full"]}
tokio-stream = { version = "0.1.8", features = ["sync"] }
tokio-tungstenite = {version = "0.17.1", features = ["rustls-tls-webpki-roots"]}
tokio-util = "0.7.0"
tonic = "0.6.2"

[build-dependencies]
tonic-build = "0.6.2"
